# 42run

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  premake5.lua
42run/: CMakeLists.txt  premake5.lua
42run/assets/bomb/: Bomb.mtl
42run/assets/cluster/: cluster.mtl
42run/assets/coin/: coin.mtl
42run/assets/cube/: cube2.mtl
42run/assets/floor/: Floor.blend  Floor.blend1  front.dae  front.mtl  front_down.dae  front_down.mtl  front_up.dae  front_up.mtl  left.dae  left.mtl  left_front.dae  left_front.mtl  right.dae  right.mtl  right_front.dae  right_front.mtl  right_left.dae  right_left.mtl  right_left_front.dae  right_left_front.mtl
42run/assets/maps/: basic.42run  map1.42run  random.42run
42run/assets/marvin/: Marvin.blend  Marvin.blend1  Marvin.dae  body.mtl
42run/assets/shaders/: basic.glsl  basic_col.glsl  basic_tex.glsl  postpro.glsl
42run/src/: BasicText.hpp  Floor.hpp  GameManager.hpp  Grid.hpp  MapRunner.hpp  Player.hpp  Trail.hpp  main.cpp
Feldespato/: CMakeLists.txt  premake5.lua
Feldespato/include/: FT.hpp
Feldespato/src/: Bone.hpp  Camera.hpp  Feldespato.cpp  Feldespato.hpp  Layer.cpp  Layer.hpp  Renderable.hpp  Renderer.cpp  Timer.hpp  Transform.hpp  Vertex.hpp  Window.cpp  Window.hpp
Feldespato/src/buffers/: FrameBuffer.hpp  VertexArray.hpp
Feldespato/src/math/: Math.cpp  Math.hpp
Feldespato/src/resource_manager/: ResourceManager.hpp  ResourceManager_Mesh.cpp  ResourceManager_MeshReader.cpp  ResourceManager_Model.cpp  ResourceManager_Shader.cpp
Feldespato/src/resources/: Animation.cpp  Animation.hpp  Geometry.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Shader.cpp  Shader.hpp  Texture2D.cpp  Texture2D.hpp
scripts/: setup.sh
src/42run/: BasicText.hpp  Floor.hpp  Grid.hpp  MapRunner.hpp  Player.hpp  main.cpp
src/42run/src/: BasicText.hpp  Floor.hpp  MapRunner.hpp  Player.hpp  main.cpp
src/engine/: Bone.hpp  Camera.hpp  FT.hpp  Feldespato.cpp  Feldespato.hpp  Layer.hpp  Renderable.hpp  Renderer.cpp  Renderer.hpp  Vertex.hpp  Window.hpp
src/engine/buffers/: Buffer.cpp  Buffer.hpp  FrameBuffer.hpp  IndexBuffer.cpp  IndexBuffer.hpp  VertexArray.cpp  VertexArray.hpp
(+31 files in other folders)
